<resources>
    <string name="app_name">Pembelajaran Matematika</string>
    <string name="nama">/nama</string>
    <string name="salsabila_rahma">/salsabila_rahma</string>
    <string name="image">/image</string>
    <string name="no_hp">no_hp</string>
    <string name="_085101852752">085101852752</string>
    <string name="button_1">button_1</string>
    <string name="button_2">button_2</string>
    <string name="button_2">button_2</string>
    <string name="button_1">button_1</string>
</resources>
