<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/smk_codingg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nama"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="14dp"
                android:text="/salsabila_rahma"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:ignore="Autfill,LabelFor,TextFields"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginStart="16dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_hp"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/edt_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="14dp"
                android:text="@string/_085101852752"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:ignore="Autfill,LabelFor,TextFields"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_nohp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_2"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_button"/>

    </RelativeLayout>

</ScrollView>